# cinema

./: .gitignore  .travis.yml  CMakeLists.txt  Gruntfile.js  LICENSE  README.md  config.json  package.json
cmake/: travis-ci.cmake
scripts/: generateDepthImage.py  generateDiskOutRefData.py  histogramMaker.py  processComposite.py  recursiveProcess.py  symlinkTestData.py
scripts/data_generation/: generate2dMpasData.py  generate2dMpasLutData.py  generateDiskOutRefData.py  generateFlatNImageData.py  generateSimpleDiskOut.py  generateWaveletData.py  generateWaveletNewApi.py
scripts/data_generation/cam5/: generate3dLightData.py  generateVolumeLinear.py  generateVolumeTent.py
scripts/data_generation/cosmology/: hacc_composite_time.py  hacc_magnitude_halos.py  hacc_magnitude_halos_tent.py  hacc_thresholds_lut.py  hacc_volume_halos.py  hacc_volume_halos_tent.py
scripts/data_generation/ne-cooling/: contours_pressure.py  volume-vel-custom.py  volume-vel.py  volume-vorticity-custom.py  volume-vorticity.py
scripts/data_generation/nuclear/: generate3dNuclearLightData.py  generateHelicityVolume.py  generateProbeData.py  generateVelMagLinear.py  generateVelMagTent.py
scripts/probe_data/: info-mpas-time-sample.json  medical_vtk_python-FIXME.py  mpas_time_vtk_python.py
web/ext/: shim.js  vector.js
web/src/: index.html.jade
web/src/js/: app-main.js  init.js
web/src/js/app/: StandaloneApp.js
web/src/shaders/fragment/: compositeJpgFragment.c  compositeLightFragment.c  displayFragment.c
web/src/shaders/vertex/: displayVertex.c
web/testing/: jshint.cfg
(+221 files in other folders)
